--- a/README
+++ b/README
@@ -7,7 +7,7 @@ https://www.chromium.org/developers/how-tos/build-instructions-android-webview
 ------
 
 The prebuilt libwebviewchromium.so included in these APKs is built from Chromium
-release tag 51.0.2693.3, using the GN build tool (not the older GYP tool). To match our build settings, set:
+release tag 51.0.2704.91, using the GN build tool (not the older GYP tool). To match our build settings, set:
 
 target_os="android"
 is_debug=false
@@ -19,15 +19,13 @@ enable_resource_whitelist_generation=true
 ffmpeg_branding="Chrome"
 proprietary_codecs=true
 enable_remoting=true
-android_default_version_code="269300300"
-android_default_version_name="51.0.2693.3"
-android_chrome_build_id="f76e63c0-7c31-4190-8c13-8421d00a1b64"
+android_chrome_build_id="c212fd71-e1d3-4b49-9f08-878f16747dd9"
 
 in your GN argument file before building.
 
 ------
 
-Due to WebView API changes in the N release, the Java code in the Chromium 2693
+Due to WebView API changes in the N release, the Java code in the Chromium 2704_81
 branch is not compatible with N. We'll be working on upstreaming the N-specific
 Java changes to Chromium once the final N SDK is released.
 
