--- a/README
+++ b/README
@@ -7,17 +7,8 @@ https://www.chromium.org/developers/how-tos/build-instructions-android-webview
 ------
 
 The prebuilt libwebviewchromium.so included in these APKs is built from Chromium
-release tag 44.0.2403.114. To match our build settings, set:
-
-GYP_DEFINES="OS=android release_unwind_tables=0 buildtype=Official chrome_build_id='2e7c7a0f-c733-4b9a-9c8e-d3cf0938369b'"
-
-in your environment before running build/gyp_chromium.
-
-------
-
-Due to WebView API changes in the M release, the Java code in the Chromium 2403
-branch is not compatible with M. We'll be working on upstreaming the M-specific
-Java changes to Chromium once the final M SDK is released.
+release tag 51.0.2704.103. To match our build settings, use
+https://gist.github.com/luca020400/aca28ac562d1de54fe94688d11578812 as reference
 
 ------
 
