--- a/README
+++ b/README
@@ -7,8 +7,26 @@ https://www.chromium.org/developers/how-tos/build-instructions-android-webview
 ------
 
 The prebuilt libwebviewchromium.so included in these APKs is built from Chromium
-release tag 51.0.2704.106. To match our build settings, use
-https://gist.github.com/luca020400/aca28ac562d1de54fe94688d11578812 as reference
+release tag 52.0.2743.100, using the GN build tool (not the older GYP tool). To match our build settings, set:
+
+target_os="android"
+is_debug=false
+is_official_build=true
+is_chrome_branded=false
+use_official_google_api_keys=false
+exclude_unwind_tables=true
+enable_resource_whitelist_generation=true
+ffmpeg_branding="Chrome"
+proprietary_codecs=true
+enable_remoting=true
+
+in your GN argument file before building.
+
+------
+
+Due to WebView API changes in the N release, the Java code in the Chromium 2743_91
+branch is not compatible with N. We'll be working on upstreaming the N-specific
+Java changes to Chromium once the final N SDK is released.
 
 ------
 
