--- a/README
+++ b/README
@@ -7,18 +7,24 @@ https://www.chromium.org/developers/how-tos/build-instructions-android-webview
 ------
 
 The prebuilt libwebviewchromium.so included in these APKs is built from Chromium
-release tag 61.0.3163.98, using the GN build tool. To match our build settings, set:
+release tag 64.0.3282.137, using the GN build tool. To match our build settings, set:
 
 target_os="android"
 is_debug=false
 is_official_build=true
 is_chrome_branded=false
 use_official_google_api_keys=false
-exclude_unwind_tables=true
 enable_resource_whitelist_generation=true
 ffmpeg_branding="Chrome"
 proprietary_codecs=true
 enable_remoting=true
+is_component_build=false
+enable_nacl=false
+remove_webcore_debug_symbols=true
+android_default_version_name=64.0.3282.137
+android_default_version_code=3282137$$
+
+$$ depends on device ARCH
 
 in your GN argument file before building.
 
@@ -26,10 +32,6 @@ in your GN argument file before building.
 
 Extra patches:
 patches/chromium-theme-color.patch: Provides a callback when a theme color is set by the page
-
-Due to WebView API changes in the O-MR1 release, the Java code in the Chromium
-3163 branch is not compatible with O-MR1. We'll be working on upstreaming
-the O-MR1 specific Java changes to Chromium once the final O-MR1 SDK is released.
 
 ------
 
