--- a/README
+++ b/README
@@ -25,7 +25,12 @@ remove_webcore_debug_symbols=true
 android_default_version_name=66.0.3359.139
 android_default_version_code=3359139$$
 
-$$ depends on device ARCH
+$$ depends on device ARCH:
+
+arm64: 50
+arm: 00
+x86_64: 60
+x86: 10
 
 in your GN argument file before building.
 
